--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.9.27",
     "save": "^2.4.0"
@@ -17,4 +19,6 @@
   "devDependencies": {
     "nodemon": "^2.0.4"
   }
+
+
 }
